@@ -125,6 +125,67 @@ dang
       end
       
     end
+              
+    describe "visiting row scenarios" do
+      
+      def mock_row_scenario(stubs = {})
+        @row_scenario ||= stub("row scenario", {:row? => true, :name => 'test', :update_table_column_widths => nil, :steps => []}.merge(stubs))
+      end
 
+      describe "without having first run the matching regular scenario" do
+      
+        before(:each) do
+          @scenario = Tree::Scenario.new(nil, 'test', 1)
+          @executor.line=5        
+          @executor.visit_regular_scenario(@scenario)
+        end
+        
+        it "should run the regular scenario before the row scenario" do
+          @scenario.should_receive(:accept)
+
+          @executor.visit_row_scenario(mock_row_scenario(:name => 'test', :at_line? => true, :accept => nil))
+        end
+
+        it "should run the row scenario after running the regular scenario" do
+          mock_row_scenario(:at_line? => true).should_receive(:accept)
+
+          @executor.visit_row_scenario(mock_row_scenario)
+        end
+      
+      end
+
+      describe "having run matching regular scenario" do
+      
+        it "should not run the regular scenario if it has already run" do
+          scenario = Tree::Scenario.new(nil, 'test', 1)
+          @executor.visit_regular_scenario(scenario)
+
+          scenario.should_not_receive(:accept)
+
+          @executor.visit_row_scenario(mock_row_scenario(:name => 'test', :at_line? => true, :accept => nil))
+        end
+      
+      end
+    end
+    
+    describe "caching visited scenarios" do
+
+      def mock_scenario(stubs = {})
+        @scenario ||= stub("scenario", {:row? => false, :name => 'test', :accept => nil, :steps => []}.merge(stubs))
+      end
+      
+      it "should reset cache after each feature visit" do
+        Tree::Scenario.stub!(:new).and_return(mock_scenario)
+
+        feature = Tree::Feature.new(nil)
+        feature.add_scenario(nil, nil)
+            
+        @executor.visit_feature(feature)
+        
+        @executor.instance_variable_get("@regular_scenario_cache").should == {}
+        @executor.instance_variable_get("@visited_scenarios").should == {}
+      end
+                  
+    end
   end
 end
